fix katex, 1 new shortcode, various fixes

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
-    {{- partial "header.html" . -}}
+{{- partial "header.html" . -}}
 
-    <body >
-        {{ block "main" . }}{{ end }}
-    </body>
+<body >
+{{ block "main" . }}{{ end }}
+
+<!-- Load Katex, if necessary. -->
+{{ if or .Params.math .IsHome }}
+{{ partial "math.html" . }}
+{{ end }}
+
+</body>
 
 </html>
