--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -1,8 +1,3 @@
-<!-- Load Katex, if necessary. -->
-{{ if or .Params.math .IsHome }}
-    {{ partial "math.html" . }}
-{{ end }}
-
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
 <!-- Pure css -->
 <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css">
@@ -12,6 +7,19 @@
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"> -->
 <!-- <link href='//fonts.googleapis.com/css?family=Raleway:400,200,100,700,300,500,600,800' rel='stylesheet' type='text/css'> -->
 
+<!-- asynchronously load Google Fonts -->
+<!-- https://csswizardry.com/2020/05/the-fastest-google-fonts/#google-fonts-async-snippet -->
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link rel="preload" as="style"
+      href="https://fonts.googleapis.com/css?family=Noto+Serif+SC&display=swap" />
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Noto+Serif+SC&display=swap"
+      media="print" onload="this.media='all'" />
+<noscript>
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Noto+Serif+SC&display=swap" />
+</noscript>
+
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css">
 
@@ -20,5 +28,3 @@
 <link rel="stylesheet" href="{{ $htstyle.Permalink | relURL }}">
 
 <link rel="stylesheet"  href="{{ "/css/hugo-tufte-override.css" | relURL }}">
-
-
