--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -21,8 +21,7 @@ article,
 header,
 footer,
 .pure-g [class*="pure-u"] {
-    font-family: "et-book", -apple-system, "San Francisco", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-        "Open Sans", "Helvetica Neue", "Lucida Grand", sans-serif;
+    font-family: et-book, "Noto Serif SC", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
 }
 
 p {
