--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -11,9 +11,9 @@
 <!-- https://csswizardry.com/2020/05/the-fastest-google-fonts/#google-fonts-async-snippet -->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link rel="preload" as="style"
-      href="https://fonts.googleapis.com/css?family=Noto+Serif+SC&display=swap" />
+      href="https://fonts.googleapis.com/css?family=Noto+Serif+SC|Noto+Emoji&display=swap" />
 <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Noto+Serif+SC&display=swap"
+      href="https://fonts.googleapis.com/css?family=Noto+Serif+SC|Noto+Emoji&display=swap"
       media="print" onload="this.media='all'" />
 <noscript>
 <link rel="stylesheet"
