--- a/layouts/shortcodes/sidenote.html
+++ b/layouts/shortcodes/sidenote.html
@@ -1,3 +1,11 @@
-{{ $sidenoteDomIdSuffix := .Ordinal }}<label for="sidenote-{{.Page.File.UniqueID}}-{{ $sidenoteDomIdSuffix }}" class="margin-toggle sidenote-number"></label>
-<input type="checkbox" id="sidenote-{{.Page.File.UniqueID}}-{{ $sidenoteDomIdSuffix }}" class="margin-toggle"/>
-<span class="sidenote">{{ .Inner | markdownify }}</span>
+{{- with $.Page.Scratch.Get "sidenoteCounter" -}}
+{{- $.Page.Scratch.Set "sidenoteCounter" (add . 1) -}}
+{{- else -}}
+{{- $.Page.Scratch.Set "sidenoteCounter" 1 -}}
+{{- end -}}
+{{ $sidenoteDomIdSuffix := $.Page.Scratch.Get "sidenoteCounter" }}
+<label for="sidenote-{{ $sidenoteDomIdSuffix }}" class="margin-toggle sidenote-number">({{ $sidenoteDomIdSuffix }})</label>
+<input type="checkbox" id="sidenote-{{ $sidenoteDomIdSuffix }}" class="margin-toggle"/>
+<span class="sidenote">
+<span class="sidenote-number">({{ $sidenoteDomIdSuffix }})</span> {{ .Inner | markdownify }}
+</span>
