--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,14 +6,12 @@
 
 {{ define "main" }}
 <div id="layout" class="pure-g">
-  <article class="pure-u-1">
-    {{ partial "brand.html" . }}
-    {{ partial "content.header.html" . }}
-    {{ partial "toc.html" . }}
-    <section>{{ .Content }}</section>
-    <section>
-      {{ partial "footer.html" . }}
-    </section>
-  </article>
+<article class="pure-u-1">
+  {{ partial "content.header.html" . }}
+  {{ partial "toc.html" . }}
+  <section>{{ .Content }}</section>
+  <section>{{ partial "footer.html" . }}</section>
+  <section>{{ partial "nav.html" . }}</section>
+</article>
 </div>
 {{ end }}
