--- a/layouts/partials/content.header.html
+++ b/layouts/partials/content.header.html
@@ -2,9 +2,9 @@
 
 <h1 class="content-title">
   {{ if .IsNode }}
-  <a href="{{ .Permalink }}">{{ .Title }}</a>
+  {{ .Title }}
   {{ else }}
-  <a href="{{ .RelPermalink }}">{{ .Title }}{{ if .Draft }} :: Draft {{end}}</a>
+  {{ .Title }}{{ if .Draft }} :: Draft {{end}}
   {{ end }}
 </h1>
 
@@ -16,23 +16,19 @@
   {{ if or (eq .Type "post") (.Params.meta)  }}
     <span class="content-meta">
       {{ if .Params.author }}
-        <i class="fa fa-user">&nbsp;</i><span class="author">
-          &nbsp;{{ .Params.author }}</span> <br>
+      <span class="author">{{ .Params.author }}</span><br />
       {{ end }}
 
       {{ if not .Params.hidedate }}
-        <i class="fa fa-calendar"></i>
-        &nbsp;{{ .Date.Format "Jan 2, 2006" }}
+      {{ .Date.Format "2006-01-02" }}
       {{end }}
 
       {{ if not .Params.hidereadtime }}
-        &nbsp;<i class="fa fa-clock-o"></i>
-        &nbsp;{{ .ReadingTime }} min read
+      {{ .ReadingTime }} min read
       {{ end }}
 
       {{ if .Params.categories }}
         <br>
-        <i class="fa fa-tags"> </i>
         {{ range .Params.categories }}
           <a  href="{{ "/categories/" | absURL }}{{ . | urlize }}">{{ . }}</a>
         {{ end }}
