--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="page-footer">
-<hr>
+<hr />
 
 <div class="previous-post" style="display:inline-block;">
   {{ if .PrevPage }}
@@ -75,6 +75,7 @@
 </p>
 {{ end }}
 
+{{ if or ( isset .Site.Params "copyright" ) ( isset .Site.Params "copyrightHolder" ) }}
 <div class="copyright">
 <p>
   {{ with .Site.Params.copyright }}
@@ -86,5 +87,6 @@
   {{end}}
 </p>
 </div>
+{{ end }}
 
 </footer>
