--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,7 +1,7 @@
 {{ if .Params.toc  }}
 <section>
   <details closed class="toc">
-    <summary>Contents</summary>
+    <summary>Table of Contents</summary>
     {{ .TableOfContents }}
   </details>
 </section>
