--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,13 +5,11 @@
 */}}
 
 {{ define "main" }}
-<div id="layout" class="pure-g">
-<article class="pure-u-1">
+<article id="main">
   {{ partial "content.header.html" . }}
   {{ partial "toc.html" . }}
   <section>{{ .Content }}</section>
   <section>{{ partial "footer.html" . }}</section>
   <section>{{ partial "nav.html" . }}</section>
 </article>
-</div>
 {{ end }}
