--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -30,10 +30,21 @@ h3:hover > a.heading-anchor {
 }
 
 hr {
+    text-align: left;
     margin-left: 0;
+    margin-top: 1.4rem;
+    margin-bottom: 1.4rem;
     width: 75%;
     max-width: 45rem;
-    border-color: rgba(250,250,250,0.25);
+    border-style: solid none none none;
+    border-color: #111;
+}
+
+kbd {
+  border: 1px #111 solid;
+  border-radius: 5px;
+  padding-right: 2px;
+  padding-left: 2px;
 }
 
 /* ------------------------------------------------------------------------ */
@@ -59,23 +70,21 @@ hr {
 }
 
 table:not(.lntable) {
-    margin-top: 1em;
+    margin-top: 1.4em;
     font-size: 1.4rem;
     width: auto; /* making booktabs style tables the unstyled default in case someone uses Markdown styling */
     /* margin: 0 auto; */
     /* border-spacing: 0px; */
-    border-top: 2px solid #111;
-    border-bottom: 2px solid #111;
 }
 
-table:not(.lntable) th,
-table:not(.lntable) td {
-    font-size: 1.25rem;
-    line-height: 1.71428571;
+table:not(.lntable) tr th {
+  border-bottom: 1px solid #111;
+  text-transform: uppercase;
 }
 
-table:not(.lntable) td {
-    padding-right: 0.75em;
+table:not(.lntable) tr th,
+table:not(.lntable) tr td {
+    padding-right: 0.5rem;
 }
 
 table.lntable {
@@ -83,6 +92,18 @@ table.lntable {
         padding: 0em;
     }
     border-spacing: 0;
+    padding: 0;
+}
+
+/* ------------------------------------------------------------------------ */
+/* Styling for footnotes. */
+/* ------------------------------------------------------------------------ */
+.footnotes ol {
+    width: 55%;
+}
+.footnotes ol li p {
+    width: 100%;
+    margin: 0;
     padding: 0;
 }
 
