address https://github.com/loikein/hugo-tufte/issues/4

--- a/assets/scss/syntax/syntax-light.scss
+++ b/assets/scss/syntax/syntax-light.scss
@@ -1,5 +1,6 @@
-.highlight .hl { background-color: #ffffd4 }
-.highlight  { background: $ht-code-bgcolor;}
+// .highlight .hl { background-color: #ffffd4 }
+// .highlight  { background: $ht-code-bgcolor;}
+.highlight .lnt { color: #6a737d } /* line number */
 .highlight .c { color: #6a737d } /* Comment */
 .highlight .err {  } /* Error */
 .highlight .k { color: #d73a49 } /* Keyword */
