--- a/assets/scss/components/code-highlight.scss
+++ b/assets/scss/components/code-highlight.scss
@@ -1,61 +1,73 @@
 $ht-code-border-radius: .4em;
 .highlight {
-    width: 55%;
+    width: 50%;
     overflow-x: scroll;
-    border-radius: $ht-code-border-radius;
+    // border-radius: $ht-code-border-radius;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-right: 2.5%;
+    margin-left: 2.5%;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    code {
+        font-size: 1rem;
+        display: block;
+    }
+
+    &>.chroma {
+        margin: 0;
+    }
+
+    &>.chroma .hl {
+        // border-radius: $ht-code-border-radius / 2;
+        display: block;
+
+        &::before{
+            content: "> ";
+            position: absolute;
+            left: 0;
+            color: #111;
+        }
+    }
 
     &>div.chroma>table.lntable{
-        margin: $ht-code-border-radius 0 $ht-code-border-radius 0;
+        overflow: initial;
+        // margin: $ht-code-border-radius 0 $ht-code-border-radius 0;
         & td:first-of-type {
             & span:not(& span>span) {
                 padding: 0 .75em 0 .5em;
             }
         }
-    }
-    &>.chroma>code {
 
+        pre {
+            margin-block-start: 0.5em;
+            margin-block-end: 0.5em;
+        }
+    }
+
+    &>.chroma>code {
         width: max-content;
         margin-top: .5em;
         margin-bottom: .5em;
         margin-left: .5em;
+
         &>span.hl{
             margin-left: -.5em;
             padding-left: .5em;
         }
     }
-
-    .chroma .hl {
-        // border-radius: $ht-code-border-radius / 2;
-        display: block;
-    }
-
-    &::-webkit-scrollbar {
-        border-radius: $ht-code-border-radius;
-        width: 10px;
-        height: 1rem;
-    }
-    &::-webkit-scrollbar-thumb {
-        border-radius: $ht-code-border-radius;
-    }
 }
+
 
 @media screen and (max-width: 760px) {
-    .highlight {
+    .highlight .chroma {
         width: 90%;
     }
-}
-
-.highlight .lntable {
-    overflow: initial;
-}
-
-.highlight pre {
-    margin: 0;
-}
-
-.highlight pre code {
-    display: block;
-    font-size: 1rem;
 }
 
 // fix #48 => https://github.com/slashformotion/hugo-tufte/issues/48
