--- a/assets/scss/pages/footer.scss
+++ b/assets/scss/pages/footer.scss
@@ -1,7 +1,6 @@
 /* Footer, but with a different name to avoid conflicts with tufte.css */
 footer.page-footer{
-    padding-top: 1em;
-    margin-top: 3em;
+    margin-top: 1.4rem;
     color: #aaa;
     width: 95%;
     max-width: 45rem;
