--- a/layouts/partials/content.header.html
+++ b/layouts/partials/content.header.html
@@ -10,17 +10,17 @@
 
 {{ if .IsPage }}
   {{ if .Params.subtitle }}
-    <p class=subtitle>{{ .Params.subtitle }}</p>
+    <h3 class=subtitle>{{ .Params.subtitle }}</h3>
   {{ end }}
 
   {{ if or (eq .Type "post") (.Params.meta)  }}
     <span class="content-meta">
       {{ if .Params.author }}
-      <span class="author">{{ .Params.author }}</span><br />
+      <p class="author">{{ .Params.author }}</p>
       {{ end }}
 
       {{ if not .Params.hidedate }}
-      {{ .Date.Format "2006-01-02" }}
+      <p class="date">{{ .Date.Format "2006-01-02" }}</p>
       {{end }}
 
       {{ if not .Params.hidereadtime }}
@@ -28,7 +28,6 @@
       {{ end }}
 
       {{ if .Params.categories }}
-        <br>
         {{ range .Params.categories }}
           <a  href="{{ "/categories/" | absURL }}{{ . | urlize }}">{{ . }}</a>
         {{ end }}
