--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -4,23 +4,15 @@ header.brand {
 
 /* Main brand title */
 header.brand h1 {
-    margin: 0;
+    margin: 0 0 0.5em 0;
     font-weight: 400;
-    color: rgba(65, 70, 75, 1);
     font-size: 3em;
 }
 
 header.brand h2 {
-    margin: 0;
-    padding-top: 0rem;
-    /*font-style: normal;*/
-    /*font-weight: 200;*/
-    color: rgba(100, 105, 110, 1);
+    margin: 1rem 0;
 }
 
 header.brand hr {
-    text-align: left;
-    margin-left: 0;
-    width: 75%;
-    border-color: rgba(250, 250, 250, 0.25);
+    // border-color: rgb(152, 152, 146);
 }
