--- a/assets/scss/components/nav.scss
+++ b/assets/scss/components/nav.scss
@@ -1,13 +1,14 @@
+nav.menu {
+    margin: 1.4rem 0;
+}
 
 nav.menu ul {
     list-style: none;
     display: block;
-    /*text-align:center;*/
-    margin-top: 0.75rem;
     padding: 0;
     max-width: 45rem;
     /* Width is the same as tufte.css body */
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     width: 87.5%;
 }
 
@@ -18,8 +19,6 @@ nav.menu li {
 
 nav.menu li a {
     text-decoration: none;
-    background: transparent;
-    color: rgba(65, 70, 75, 1);
     letter-spacing: 0.05em;
     text-transform: uppercase;
 }
@@ -27,6 +26,5 @@ nav.menu li a {
 nav.menu li a:hover,
 nav.menu li a:active,
 nav.menu li a:focus {
-    background: inherit;
-    color: darkgray;
+    // background: inherit;
 }
