--- a/layouts/shortcodes/epigraph.html
+++ b/layouts/shortcodes/epigraph.html
@@ -1,15 +1,12 @@
 <div class="epigraph">
 <blockquote>
-{{ $t := .Get "type" }}
-{{ if eq $t "compact"  }}{{ .Inner | markdownify }}{{ else }}<p>{{ .Inner | markdownify }}</p>{{ end }}
+{{ .Inner | $.Page.RenderString (dict "display" "block") }}
 {{ if .IsNamedParams }}
-<footer>
-{{ with .Get "pre" }}{{ . }}{{ end }}
-{{ with .Get "link" }}<a href={{ . }}>{{ end }}
-{{ with .Get "cite" }}<cite>{{ . }}</cite>{{ end }}
-</a>
-{{ with .Get "post" }}{{ . }}{{ end }}
-</footer>
+    <footer>
+    {{- with .Get "author" -}}{{ . }}{{- end -}}
+    {{- with .Get "cite" -}}, <cite>{{ . | markdownify }}</cite>{{- end -}}
+    {{- with .Get "detail" -}}, {{ . | markdownify }}{{- end -}}
+    </footer>
 {{ end }}
 </blockquote>
 </div>
