--- a/layouts/shortcodes/marginnote.html
+++ b/layouts/shortcodes/marginnote.html
@@ -1,7 +1,7 @@
-{{- $marginnoteDomIdSuffix := (add .Ordinal 1) -}}
+{{- $label := (add .Ordinal 1) -}}
 {{- $ind := .Get "ind" | default .Site.Params.marginNoteInd -}}
-<label for="marginnote-{{ $marginnoteDomIdSuffix }}" class="margin-toggle marginnote-ind">{{ $ind }}</label>
-<input type="checkbox" id="marginnote-{{ $marginnoteDomIdSuffix }}" class="margin-toggle"/>
+<label for="marginnote-{{ $label }}" class="margin-toggle marginnote-ind">{{ $ind }}</label>
+<input type="checkbox" id="marginnote-{{ $label }}" class="margin-toggle"/>
 <span class="marginnote">
 {{ .Inner | markdownify}}
 </span>
