adjust subtitle html; remove redundant style

--- a/assets/scss/components/nav.scss
+++ b/assets/scss/components/nav.scss
@@ -1,8 +1,8 @@
-nav.menu {
+.menu {
     margin: 1.4rem 0;
 }
 
-nav.menu ul {
+.menu ul {
     list-style: none;
     display: block;
     padding: 0;
@@ -12,19 +12,13 @@ nav.menu ul {
     width: 87.5%;
 }
 
-nav.menu li {
+.menu li {
     display: inline-block;
     margin-right: 1rem;
 }
 
-nav.menu li a {
+.menu li a {
     text-decoration: none;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-}
-
-nav.menu li a:hover,
-nav.menu li a:active,
-nav.menu li a:focus {
-    // background: inherit;
 }
