--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article id="main">
+<article id="main" class="home-page">
   {{ partial "brand.html" . }}
   {{ with .Content }}
     <section>
