--- a/layouts/partials/brand.html
+++ b/layouts/partials/brand.html
@@ -1,6 +1,6 @@
 <header class="brand">
 <h1>{{ .Site.Title}}</h1>
-<h2 class="subtitle">{{ .Site.Params.subtitle }}</h2>
+<p class="subtitle">{{ .Site.Params.subtitle }}</p>
 {{ partial "nav.html" . }}
 <hr />
 </header>
