--- a/layouts/partials/content.header.html
+++ b/layouts/partials/content.header.html
@@ -26,8 +26,8 @@
     <span>{{ .ReadingTime }} min read&nbsp;</span>
     {{- end -}}
 
-    {{- range .Params.categories -}}
-    <a href="{{ "/categories/" | absURL }}{{ . | urlize }}">{{ . }}</a>&nbsp;
+    {{- range .Params.tags -}}
+    <a href="{{ "/tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>&nbsp;
     {{- end -}}
   </span>
   {{- end -}}
