--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <head>
-<title>{{ .Site.Title }} - {{ .Title  }}</title>
+<title>{{ .Title  }} - {{ .Site.Title }}</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <meta name="description"
