remove redundant layout, add showSummary switch

--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -131,6 +131,7 @@ section {
 
 .page-list .content-title {
     margin-top: 4.2rem;
+    margin-bottom: 1.4rem;
 }
 
 .page-list .content-title:first-child {
